ghc-6.2/hslibs/win32/Win32Control_stub_ffi.h

extern void* prim_createEditWindow(char * nm,DWORD wstyle,DWORD estyle,int x,int y,int w,int h,HWND parent,HMENU hmenu,HANDLE handle);
extern HWND access_prim_createEditWindow_hwnd(HsPtr);
extern int access_prim_createEditWindow_gc_failed(HsPtr);
extern void* access_prim_createEditWindow_gc_failstring(HsPtr);
extern DWORD prim_lBS_NOTIFY();
extern DWORD prim_lBS_SORT();
extern DWORD prim_lBS_NOREDRAW();
extern DWORD prim_lBS_MULTIPLESEL();
extern DWORD prim_lBS_OWNERDRAWFIXED();
extern DWORD prim_lBS_OWNERDRAWVARIABLE();
extern DWORD prim_lBS_HASSTRINGS();
extern DWORD prim_lBS_USETABSTOPS();
extern DWORD prim_lBS_NOINTEGRALHEIGHT();
extern DWORD prim_lBS_MULTICOLUMN();
extern DWORD prim_lBS_WANTKEYBOARDINPUT();
extern DWORD prim_lBS_DISABLENOSCROLL();
extern DWORD prim_lBS_STANDARD();
extern void* prim_createListBox(char * nm,DWORD wstyle,DWORD lstyle,int x,int y,int w,int h,HWND parent,HMENU hmenu,HANDLE handle);
extern HWND access_prim_createListBox_hwnd(HsPtr);
extern int access_prim_createListBox_gc_failed(HsPtr);
extern void* access_prim_createListBox_gc_failstring(HsPtr);
extern DWORD prim_sBS_HORZ();
extern DWORD prim_sBS_TOPALIGN();
extern DWORD prim_sBS_BOTTOMALIGN();
extern DWORD prim_sBS_VERT();
extern DWORD prim_sBS_LEFTALIGN();
extern DWORD prim_sBS_RIGHTALIGN();
extern DWORD prim_sBS_SIZEBOX();
extern DWORD prim_sBS_SIZEBOXTOPLEFTALIGN();
extern DWORD prim_sBS_SIZEBOXBOTTOMRIGHTALIGN();
extern void* prim_createScrollbar(char * nm,DWORD wstyle,DWORD sstyle,int x,int y,int w,int h,HWND parent,HMENU hmenu,HANDLE handle);
extern HWND access_prim_createScrollbar_hwnd(HsPtr);
extern int access_prim_createScrollbar_gc_failed(HsPtr);
extern void* access_prim_createScrollbar_gc_failstring(HsPtr);
extern DWORD prim_sS_LEFT();
extern DWORD prim_sS_CENTER();
extern DWORD prim_sS_RIGHT();
extern DWORD prim_sS_ICON();
extern DWORD prim_sS_BLACKRECT();
extern DWORD prim_sS_GRAYRECT();
extern DWORD prim_sS_WHITERECT();
extern DWORD prim_sS_BLACKFRAME();
extern DWORD prim_sS_GRAYFRAME();
extern DWORD prim_sS_WHITEFRAME();
extern DWORD prim_sS_SIMPLE();
extern DWORD prim_sS_LEFTNOWORDWRAP();
extern DWORD prim_sS_NOPREFIX();
extern void* prim_createStaticWindow(char * nm,DWORD wstyle,DWORD sstyle,int x,int y,int w,int h,HWND parent,HMENU hmenu,HANDLE handle);
extern HWND access_prim_createStaticWindow_hwnd(HsPtr);
extern int access_prim_createStaticWindow_gc_failed(HsPtr);
extern void* access_prim_createStaticWindow_gc_failstring(HsPtr);