ghc-6.2/hslibs/win32/Win32Control.hs


createEditWindow :: String -> WindowStyle -> EditStyle -> MbPos -> MbPos -> MbPos -> MbPos -> HWND -> MbHMENU -> HANDLE -> IO HWND
createEditWindow gc_arg1 wstyle estyle x y w h parent hmenu handle =
  (marshall_string_ gc_arg1) >>= \ (nm) ->
  (case x of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just x) -> (return ((x)))
   }) >>= \ (x) ->
  (case y of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just y) -> (return ((y)))
   }) >>= \ (y) ->
  (case w of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just w) -> (return ((w)))
   }) >>= \ (w) ->
  (case h of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just h) -> (return ((h)))
   }) >>= \ (h) ->
  (case hmenu of {
      Nothing -> (return (nullHANDLE));
      (Just hmenu) -> (return ((hmenu)))
   }) >>= \ (hmenu) ->
  prim_createEditWindow nm wstyle estyle x y w h parent hmenu handle
  >>= \ gc_result ->
  access_prim_createEditWindow_hwnd (gc_result :: Addr) >>= \ hwnd ->
  access_prim_createEditWindow_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createEditWindow_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (hwnd))
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_createEditWindow" prim_createEditWindow :: Addr -> Word32 -> Word32 -> Int -> Int -> Int -> Int -> Addr -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createEditWindow_hwnd :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createEditWindow_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createEditWindow_gc_failstring :: Addr -> IO (Addr)

-- see comment about freeing windowNames in Win32Window.createWindow
-- %end free(nm)

-- == List boxes


----------------------------------------------------------------

type ListBoxStyle   = WindowStyle

foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_NOTIFY" lBS_NOTIFY :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_SORT" lBS_SORT :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_NOREDRAW" lBS_NOREDRAW :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_MULTIPLESEL" lBS_MULTIPLESEL :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_OWNERDRAWFIXED" lBS_OWNERDRAWFIXED :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_OWNERDRAWVARIABLE" lBS_OWNERDRAWVARIABLE :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_HASSTRINGS" lBS_HASSTRINGS :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_USETABSTOPS" lBS_USETABSTOPS :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_NOINTEGRALHEIGHT" lBS_NOINTEGRALHEIGHT :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_MULTICOLUMN" lBS_MULTICOLUMN :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_WANTKEYBOARDINPUT" lBS_WANTKEYBOARDINPUT :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_DISABLENOSCROLL" lBS_DISABLENOSCROLL :: ListBoxStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_lBS_STANDARD" lBS_STANDARD :: ListBoxStyle

createListBox :: String -> WindowStyle -> ListBoxStyle -> MbPos -> MbPos -> MbPos -> MbPos -> HWND -> MbHMENU -> HANDLE -> IO HWND
createListBox gc_arg1 wstyle lstyle x y w h parent hmenu handle =
  (marshall_string_ gc_arg1) >>= \ (nm) ->
  (case x of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just x) -> (return ((x)))
   }) >>= \ (x) ->
  (case y of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just y) -> (return ((y)))
   }) >>= \ (y) ->
  (case w of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just w) -> (return ((w)))
   }) >>= \ (w) ->
  (case h of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just h) -> (return ((h)))
   }) >>= \ (h) ->
  (case hmenu of {
      Nothing -> (return (nullHANDLE));
      (Just hmenu) -> (return ((hmenu)))
   }) >>= \ (hmenu) ->
  prim_createListBox nm wstyle lstyle x y w h parent hmenu handle
  >>= \ gc_result ->
  access_prim_createListBox_hwnd (gc_result :: Addr) >>= \ hwnd ->
  access_prim_createListBox_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createListBox_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (hwnd))
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_createListBox" prim_createListBox :: Addr -> Word32 -> Word32 -> Int -> Int -> Int -> Int -> Addr -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createListBox_hwnd :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createListBox_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createListBox_gc_failstring :: Addr -> IO (Addr)

-- see comment about freeing windowNames in Win32Window.createWindow
-- %end free(nm)

-- == Scrollbars


----------------------------------------------------------------

type ScrollbarStyle = WindowStyle

foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sBS_HORZ" sBS_HORZ :: ScrollbarStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sBS_TOPALIGN" sBS_TOPALIGN :: ScrollbarStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sBS_BOTTOMALIGN" sBS_BOTTOMALIGN :: ScrollbarStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sBS_VERT" sBS_VERT :: ScrollbarStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sBS_LEFTALIGN" sBS_LEFTALIGN :: ScrollbarStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sBS_RIGHTALIGN" sBS_RIGHTALIGN :: ScrollbarStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sBS_SIZEBOX" sBS_SIZEBOX :: ScrollbarStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sBS_SIZEBOXTOPLEFTALIGN" sBS_SIZEBOXTOPLEFTALIGN :: ScrollbarStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sBS_SIZEBOXBOTTOMRIGHTALIGN" sBS_SIZEBOXBOTTOMRIGHTALIGN :: ScrollbarStyle

createScrollbar :: String -> WindowStyle -> ScrollbarStyle -> MbPos -> MbPos -> MbPos -> MbPos -> HWND -> MbHMENU -> HANDLE -> IO HWND
createScrollbar gc_arg1 wstyle sstyle x y w h parent hmenu handle =
  (marshall_string_ gc_arg1) >>= \ (nm) ->
  (case x of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just x) -> (return ((x)))
   }) >>= \ (x) ->
  (case y of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just y) -> (return ((y)))
   }) >>= \ (y) ->
  (case w of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just w) -> (return ((w)))
   }) >>= \ (w) ->
  (case h of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just h) -> (return ((h)))
   }) >>= \ (h) ->
  (case hmenu of {
      Nothing -> (return (nullHANDLE));
      (Just hmenu) -> (return ((hmenu)))
   }) >>= \ (hmenu) ->
  prim_createScrollbar nm wstyle sstyle x y w h parent hmenu handle
  >>= \ gc_result ->
  access_prim_createScrollbar_hwnd (gc_result :: Addr) >>= \ hwnd ->
  access_prim_createScrollbar_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createScrollbar_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (hwnd))
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_createScrollbar" prim_createScrollbar :: Addr -> Word32 -> Word32 -> Int -> Int -> Int -> Int -> Addr -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createScrollbar_hwnd :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createScrollbar_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createScrollbar_gc_failstring :: Addr -> IO (Addr)

-- see comment about freeing windowNames in Win32Window.createWindow
-- %end free(nm)

-- == Static controls aka. labels


----------------------------------------------------------------

type StaticControlStyle = WindowStyle

foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_LEFT" sS_LEFT :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_CENTER" sS_CENTER :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_RIGHT" sS_RIGHT :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_ICON" sS_ICON :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_BLACKRECT" sS_BLACKRECT :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_GRAYRECT" sS_GRAYRECT :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_WHITERECT" sS_WHITERECT :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_BLACKFRAME" sS_BLACKFRAME :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_GRAYFRAME" sS_GRAYFRAME :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_WHITEFRAME" sS_WHITEFRAME :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_SIMPLE" sS_SIMPLE :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_LEFTNOWORDWRAP" sS_LEFTNOWORDWRAP :: StaticControlStyle
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_sS_NOPREFIX" sS_NOPREFIX :: StaticControlStyle

createStaticWindow :: String -> WindowStyle -> StaticControlStyle -> MbPos -> MbPos -> MbPos -> MbPos -> HWND -> MbHMENU -> HANDLE -> IO HWND
createStaticWindow gc_arg1 wstyle sstyle x y w h parent hmenu handle =
  (marshall_string_ gc_arg1) >>= \ (nm) ->
  (case x of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just x) -> (return ((x)))
   }) >>= \ (x) ->
  (case y of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just y) -> (return ((y)))
   }) >>= \ (y) ->
  (case w of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just w) -> (return ((w)))
   }) >>= \ (w) ->
  (case h of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just h) -> (return ((h)))
   }) >>= \ (h) ->
  (case hmenu of {
      Nothing -> (return (nullHANDLE));
      (Just hmenu) -> (return ((hmenu)))
   }) >>= \ (hmenu) ->
  prim_createStaticWindow nm wstyle sstyle x y w h parent hmenu handle
  >>= \ gc_result ->
  access_prim_createStaticWindow_hwnd (gc_result :: Addr) >>= \ hwnd ->
  access_prim_createStaticWindow_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createStaticWindow_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (hwnd))
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_createStaticWindow" prim_createStaticWindow :: Addr -> Word32 -> Word32 -> Int -> Int -> Int -> Int -> Addr -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createStaticWindow_hwnd :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createStaticWindow_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Control_stub_ffi.h" access_prim_createStaticWindow_gc_failstring :: Addr -> IO (Addr)

-- see comment about freeing windowNames in Win32Window.createWindow
-- %end free(nm)

{- UNTESTED - leave out

type CommonControl   = Addr
%dis commonControl x = addr ({LPCTSTR} x)
